# EventGlory

./: README.md  docker-compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/: manage.py
backend/src/api/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/src/api/migrations/: 0001_initial.py  0002_event_description.py  0003_event_logo.py  0004_alter_event_logo.py  0005_remove_event_logo_event_image.py  0006_alter_pessoa_endereco_alter_pessoa_user.py  0007_rename_rua_endereco_logradouro_endereco_numero.py  0008_pessoa_date_of_birth.py  0009_event_min_age_alter_pessoa_endereco.py  0010_alter_contato_options_alter_endereco_options_and_more.py  0011_contato_created_by_contato_updated_by_and_more.py  0012_alter_event_options_event_categories_event_city_and_more.py  0013_alter_contato_options_alter_endereco_options_and_more.py
backend/src/api/schemes/: extension_schemes.py  oauth2_schemas.py
backend/src/eventglory/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  middleware.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  middleware.ts  toast-provider.tsx
frontend/app/(private)/: layout.tsx
frontend/components/: AppSidebar.tsx  dialog-draggable.tsx
frontend/components/auth/: login-form.tsx  register-form.tsx
frontend/components/main-layout/: header.tsx  user-menu-options.tsx
frontend/components/ui/: sidebar.tsx
frontend/hooks/: useDraggable.tsx
frontend/lib/: fetch-server.ts  fetch.ts
frontend/lib/toast/: set-toast-cookie.ts  toast.ts
frontend/lib/utils/: session.ts  token-manager.ts
frontend/src/app/: layout.tsx  toast-provider.tsx
frontend/src/components/: card-form.tsx
(+31 files in other folders)
