[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Oliveira",email = "flipeaz342@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "markdown (>=3.7,<4.0)",
    "django-filter (>=25.1,<26.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "drf-social-oauth2 (==3.1.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.7"
django-stubs = "^5.1.3"
djangorestframework-stubs = "^3.15.3"

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401",  # imperative mood
    "D101",
    "D102",
    "D100",
    "D106"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort.sections]
"django" = ["django"]
"drf" = ["rest_framework"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "eventglory.settings"

[mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_decorators = false

[mypy.plugins.django-stubs]
ignore_errors = true